--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyWebpage</title>
+    <title>Giuseppe Scarso</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main">
+        <div class="card">
+            <img src="img/IT_Scarso_Giuseppe_Lateral-2-1024x1024.jpg" alt="Card Image" class="card-image">
+            <div class="card-content">
+                <h2 class="card-title">Giuseppe Scarso</h2>
+                <p class="card-text">I am a 23-year-old computer engineering graduate from Politecnico di Torino, where I completed my bachelor’s degree. Currently, I am pursuing my master’s degree at the same institution, with an expected graduation in December 2024. My academic background has provided me with a solid foundation in both theoretical and practical aspects of computer engineering, and I am eager to leverage my skills and knowledge in a dynamic professional environment.</p>
+                <a href="#" class="card-button">Read More</a>
+            </div>
+        </div>
+    </div>
+
+
     
 </body>
 </html>
